css improvements + better mobile support + new landing page.

--- a/prototype/website/index.html
+++ b/prototype/website/index.html
@@ -87,7 +87,7 @@
 
     </script>
 </head>
-<body style="position: absolute;" oncontextmenu="return application.development.rightClick;">
+<body oncontextmenu="return application.development.rightClick;">
 
 <app-view></app-view>
 
