--- a/prototype/website/src/game-app/app-view.html
+++ b/prototype/website/src/game-app/app-view.html
@@ -26,7 +26,11 @@
         <style>
             :host {
                 display: block;
+                background-image: url("/src/images/background.png");
+                background-repeat: repeat-x;
+                background-attachment: fixed;
                 width: 100%;
+                min-height: 100vh;
             }
 
             #toolbar {
