--- a/prototype/website/src/game-app/character-list.html
+++ b/prototype/website/src/game-app/character-list.html
@@ -24,7 +24,7 @@
         <style>
             :host {
                 display: block;
-                margin-top: 128px;
+                padding-top: 128px;
             }
 
             .container {
@@ -87,9 +87,9 @@
                 margin-bottom: -24px;
             }
 
-            @media (max-width: 632px) {
+            @media (max-width: 728px) {
                 :host {
-                    margin-top: 54px;
+                    padding-top: 40px;
                 }
 
                 .character {
@@ -100,6 +100,7 @@
 
                 .container {
                     width: 100%;
+                    margin-bottom: 20px;
                 }
 
                 .character-list-box {
