--- a/prototype/website/src/game-app/game-view.html
+++ b/prototype/website/src/game-app/game-view.html
@@ -88,7 +88,7 @@
                     // only play sound when online, to prevent interruptions on reconnects and
                     // give the user feedback on when it's connected again.
                     if (!offline) {
-                        this.bgsound = new Audio('/resources/sound/background.mp3');
+                        this.bgsound = new Audio('/src/sound/background.mp3');
                         this.bgsound.loop = true;
                         this.bgsound.volume = 0.5;
 
