--- a/prototype/website/src/game-app/ui/game-menu.html
+++ b/prototype/website/src/game-app/ui/game-menu.html
@@ -25,6 +25,7 @@
                 height: 28px;
                 padding-left: 8px;
                 padding-right: 8px;
+                z-index: 500;
             }
         </style>
 
