--- a/prototype/website/src/game-app/page-patchnotes.html
+++ b/prototype/website/src/game-app/page-patchnotes.html
@@ -37,6 +37,7 @@
 
             .text {
                 margin-left: 32px;
+                margin-right: 32px;
                 padding-bottom: 8px;
             }
 
