--- a/prototype/website/src/game-app/start-page.html
+++ b/prototype/website/src/game-app/start-page.html
@@ -9,7 +9,8 @@
 
 <link rel="import" href="page-patchnotes.html">
 <link rel="import" href="page-news.html">
-<link rel="import" href="page-gameinfo.html">
+<link rel="import" href="page-about.html">
+<link rel="import" href="page-game.html">
 
 
 <!--
@@ -25,13 +26,14 @@
         <style>
             :host {
                 display: block;
+                padding-top: 128px;
+                padding-bottom: 64px;
             }
 
             .container {
                 width: 80%;
                 max-width: 825px;
                 margin: auto;
-                margin-top: 128px;
                 display: block;
             }
 
@@ -42,39 +44,58 @@
                 font-size: 12px;
             }
 
+            @media (max-width: 728px) {
+                :host {
+                    padding-top: 40px;
+                    padding-bottom: 20px;
+                }
+
+                .container {
+                    width: 100%;
+                }
+            }
+
         </style>
 
-        <paper-material class="container center-box" elevation="3">
+        <div>
+            <paper-material class="container center-box" elevation="3">
 
-            <paper-tabs selected="{{page}}" no-slide>
-                <paper-tab>News</paper-tab>
-                <paper-tab>Realm info</paper-tab>
-                <paper-tab>Patch notes</paper-tab>
-            </paper-tabs>
+                <paper-tabs selected="{{page}}" no-slide>
+                    <paper-tab>Mutable Bunnies</paper-tab>
+                    <paper-tab>News</paper-tab>
+                    <!--<paper-tab>About</paper-tab>-->
+                    <paper-tab>Patch notes</paper-tab>
+                </paper-tabs>
 
-            <iron-pages selected="{{page}}" class="page-content">
-                <div>
-                    <paper-material elevation="0">
-                        <page-news></page-news>
-                    </paper-material>
-                </div>
-                <div>
-                    <paper-material elevation="0">
-                        <page-gameinfo></page-gameinfo>
-                    </paper-material>
-                </div>
-                <div>
-                    <paper-material elevation="0">
-                        <page-patchnotes></page-patchnotes>
-                    </paper-material>
-                </div>
-            </iron-pages>
+                <iron-pages selected="{{page}}" class="page-content">
+                    <div>
+                        <paper-material elevation="0">
+                            <page-game></page-game>
+                        </paper-material>
+                    </div>
+                    <div>
+                        <paper-material elevation="0">
+                            <page-news></page-news>
+                        </paper-material>
+                    </div>
+                    <!--<div>
+                        <paper-material elevation="0">
+                            <page-about></page-about>
+                        </paper-material>
+                    </div>-->
+                    <div>
+                        <paper-material elevation="0">
+                            <page-patchnotes></page-patchnotes>
+                        </paper-material>
+                    </div>
+                </iron-pages>
 
-            <template is="dom-if" if="[[!installed]]">
-                <a href="#" class="install-link" on-click="_install">install to desktop</a>
-            </template>
-            <paper-button raised class="primary flex" on-tap="start">ENTER GAME</paper-button>
-        </paper-material>
+                <template is="dom-if" if="[[!installed]]">
+                    <a href="#" class="install-link" on-click="_install">install to desktop</a>
+                </template>
+                <paper-button raised class="primary flex" on-tap="start">TAKE ME ON AN ADVENTURE</paper-button>
+            </paper-material>
+        </div>
     </template>
     <script>
         class StartPage extends Polymer.Element {
