minor styling for inventory-items.

--- a/prototype/website/src/game-app/ui/inventory-item.html
+++ b/prototype/website/src/game-app/ui/inventory-item.html
@@ -19,6 +19,7 @@
 
             span {
                 padding: 0.28rem;
+                margin-top: 4px;
             }
 
             .item-stats {
@@ -38,13 +39,6 @@
             .stats-header {
                 display: block;
                 text-transform: uppercase;
-            }
-
-            .icon-quantity {
-                display: block;
-                position: absolute;
-                right: 6px;
-                top: 44px;
             }
 
             .item-slot {
@@ -67,11 +61,12 @@
             }
 
             .icon-quantity {
+                display: block;
                 position: absolute;
                 right: 8px;
-                top: 48px;
+                top: 40px;
                 font-size: small;
-                text-shadow: 0px 0px 4px #000;
+                text-shadow: 0 0 4px #000;
             }
 
             .item-info {
