fix backface visibility in character-list.

--- a/prototype/website/src/game-app/character-list.html
+++ b/prototype/website/src/game-app/character-list.html
@@ -31,6 +31,8 @@
                 display: block;
                 width: 582px;
                 margin-bottom: 32px;
+                /* super important property that fixes a 1px jump on hover. */
+                backface-visibility: hidden;
             }
 
             .character {
