remove margin from .center-box + final context commit.

--- a/prototype/website/src/game-app/game-view.html
+++ b/prototype/website/src/game-app/game-view.html
@@ -9,6 +9,7 @@
 <link rel="import" href="./ui/death-dialog.html">
 <link rel="import" href="./ui/loot-dialog.html">
 <link rel="import" href="./ui/player-inventory.html">
+<link rel="import" href="./ui/context-menu.html">
 
 <!--
     @author Robin Duda
@@ -68,6 +69,7 @@
                 <chat-box></chat-box>
                 <spell-bar></spell-bar>
                 <game-menu></game-menu>
+                <context-menu></context-menu>
             </template>
         </div>
 
