new notification system with custom toaster.

--- a/prototype/website/src/game-app/game-login.html
+++ b/prototype/website/src/game-app/game-login.html
@@ -81,7 +81,7 @@
 
         </paper-material>
 
-        <paper-toast class="fit-bottom" id="loginToast" text="{{toasttext}}"></paper-toast>
+        <paper-toast class="fit-bottom" id="loginToast" text="[[toasttext]]"></paper-toast>
     </template>
 </dom-module>
 
