moved more notifications to the new notification system.

--- a/prototype/website/src/game-app/ui/context-menu.html
+++ b/prototype/website/src/game-app/ui/context-menu.html
@@ -111,10 +111,12 @@
 
             _party() {
                 application.publish('notification', 'Partying with other players is not yet implemented.');
+                this._hide();
             }
 
             _trade() {
                 application.publish('notification', 'Trading with other players is not yet implemented.');
+                this._hide();
             }
 
             _read(target) {
